# python-workbench

./: .gitignore  README.md  purge_venv.sh
part_1-python-fundamentals/01_mini-projects/13_streamlit-tutorial/: README.md  pyproject.toml
part_1-python-fundamentals/01_mini-projects/13_streamlit-tutorial/stapp/: main.py
part_1-python-fundamentals/02_testing-deep-dive/03-hello-pytest/: README.md  pyproject.toml
part_1-python-fundamentals/02_testing-deep-dive/03-hello-pytest/prgtotest/: main.py  mylibtotest.py
part_1-python-fundamentals/02_testing-deep-dive/04-less-basic-pytest/: pyproject.toml
part_1-python-fundamentals/02_testing-deep-dive/04-less-basic-pytest/my_package/: the_code_to_test.py
part_1-python-fundamentals/02_testing-deep-dive/04-less-basic-pytest/tests/: conftest.py
part_1-python-fundamentals/03_basics-deep-dive/14_data-types-as-objects/: 14_data-types-as-objects.ipynb  README.md  people.txt  pyproject.toml
part_1-python-fundamentals/03_basics-deep-dive/99_asyncio/01_hello-asyncio/: README.md  app.py  pyproject.toml
part_1-python-fundamentals/03_basics-deep-dive/99_asyncio/06_sync-generators/: 01_hello-generator.py  02_fibonacci.py  03_hello-generator-iterator-next.py  04_hello-iterable-iterator-strings.py  README.md  pyproject.toml
part_1-python-fundamentals/03_basics-deep-dive/99_asyncio/07_aiohttp/: README.md  main.py  pyproject.toml
part_1-python-fundamentals/03_basics-deep-dive/99_asyncio/08_async-calling-long-running-sync/: README.md  main.py  pyproject.toml
part_1-python-fundamentals/03_basics-deep-dive/99_asyncio/10_asyncio-tutorial/: 01_hello-count-sync.py  02_hello-count-async.py  03_invoking-coroutine-wo-await.py  04_random-async.py  05_chaining-coroutines.py  06_async-queues.py  07_coroutines-and-generators.py  08_async-generator.py  09_old-event-loop.py  10_coroutine-wo-event-loop.py  11_coroutine-wo-await.py  12_coroutine-asyncio-run.py  13_create-task.py  14_task-caveats.py  15_task_wo_create_task.py  16_asyncio-gather-coroutines.py  17_asyncio-gather-tasks.py  18_asyncio-gather-async-iterators.py  19_asyncio-as_completed.py  20_asyncio-parallel.py  21_asyncio-health-checker.py  22_aiofiles-parallel-reads.py  23_mixing-sync-and-async.py  24_mixing-sync-and-async-done-wrong.py  25_futures.py  26_asyncio-gather-exception-handling.py  27_tasks-vs-coroutines.py  28_task-lifecycle.py  29_task-callback.py  30_tasks-in-event-loop.py  31_asyncio-gather-single-future.py  32_asyncio-wait.py  33_hello-task-group.py  34_asyncio-wait-for.py  35_shielding-tasks.py  36_to-thread-blocking-io.py  37_hello-async-iterator_v1.py  37_hello-async-iterator_v2.py  37_hello-async-iterator_v3.py  38_hello-async-generator.py  (+11 more)
part_1-python-fundamentals/03_basics-deep-dive/99_asyncio/11_asyncio-canned-chat/: README.md  client.py  pyproject.toml  server.py
part_1-python-fundamentals/03_basics-deep-dive/99_patterns-and-idioms/07_sync-observer-event-emitter/: README.md  main_v0.py  main_v1.py  pyproject.toml
part_1-python-fundamentals/03_basics-deep-dive/99_patterns-and-idioms/08_async-observables/: README.md  main.py  pyproject.toml
part_2-math/01_math-concepts/07_understanding-rates-of-change/: 07_understanding-rates-of-change.ipynb  pyproject.toml
part_2-math/01_math-concepts/08_simulating-moving-objects/: 08_simulating-moving-objects.ipynb  README.md  pyproject.toml
part_2-math/01_math-concepts/09_symbolic-expressions/: 09_symbolic-expressions.ipynb  README.md  pyproject.toml
part_2-math/01_math-concepts/10_simulating-force-fields/: 10_simulating-force-fields.ipynb  README.md  pyproject.toml
part_2-math/01_math-concepts/11_optimizing-physical-systems/: 11_optimizing-physical-systems.ipynb  README.md  pyproject.toml
part_2-math/02_mini-projects/03_vector-3d-lib/: README.md  main.py  main_math.py  pyproject.toml
part_2-math/02_mini-projects/10_mat-lib/: README.md  main.py  pyproject.toml  requirements.txt
part_2-math/02_mini-projects/10_mat-lib/mat/: __init__.py  matrices.py
part_2-math/02_mini-projects/13-asteroids_base-matplotlib/: README.md  pyproject.toml
part_2-math/02_mini-projects/13-asteroids_base-matplotlib/asteroids/: main.py
part_2-math/02_mini-projects/19-systems-of-equations/: README.md  pyproject.toml
part_2-math/02_mini-projects/19-systems-of-equations/sysequations/: main.py
part_2-math/02_mini-projects/29-cannonball-simulation/: main.py  pyproject.toml
part_2-math/02_mini-projects/29-cannonball-simulation/cannonballsim/: __init__.py  physics.py  plotting.py
part_3-ml-and-ai/01-generative-ai/01_intro-to-langchain/: .gitignore  01-langchain-intro.ipynb  README.md  pyproject.toml
part_3-ml-and-ai/01-generative-ai/02_ai-agents-langgraph/: 02-langgraph-agents.ipynb  README.md  pyproject.toml
part_5-misc/02_sqlalchemy/02_database-metadata/: 01_metadata-obj.py  02_metadata-orm.py  03_table-reflection.py  README.md  pyproject.toml
part_5-misc/02_sqlalchemy/03_working-with-data/: 01_insert-data.py  02_select-data.py  03_select-data-orm.py  04_update-data.py  05_delete-data.py  README.md  pyproject.toml
part_5-misc/02_sqlalchemy/04_orm-data-manipulation/: 01_insert-objects-uow.py  02_update-objects-uow.py  03_delete-objects-uow.py  04_rollback-uow.py  README.md  pyproject.toml
part_5-misc/02_sqlalchemy/05_orm-relationships/: 01_persist-and-load.py  02_relationshipns-in-queries.py  03_loading-strategies.py  README.md  pyproject.toml
part_5-misc/02_sqlalchemy/06_relationships/: README.md  a1_one-to-one_single-table.py  a2_one-to-one_distinct-tables-sharing-pk.py  a3_one-to-one_distinct-tables.py  b1_one-to-many_distinct-tables.py  b2_one-to-many_link-table.py  c1_many-to-many_link-table.py  c2_many-to-many_link-table-pk.py  j1_join.py  orm_a1_one-to-one_composite.py  orm_a2_one-to-one_distinct-tables.py  orm_b1_one-to-many_distinct-tables.py  orm_c1_many-to-many_link-table.py  pyproject.toml
part_5-misc/03_loguru/01_loguru-samples/: 01_hello-loguru.py  02_log-message-formatting.py  03_log-exceptions.py  04_structured-logging.py  05_level-filter.py  06_level-filter-lib.py  README.md  pyproject.toml
(+1281 files in other folders)
