[tool.poetry]
name = "math-08-ipynb"
version = "0.1.0"
description = "08 - Simulating moving objects"
authors = ["Sergio F. Gonzalez <sergio.f.gonzalez@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
vec2d = "^0.2.3"
ipykernel = "^6.29.4"
tabulate = "^0.9.0"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
vec3d = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
