[tool.poetry]
name = "09-symbolic-expr-ipynb"
version = "0.1.0"
description = "09 - Symbolic expressions"
authors = ["Sergio F. Gonzalez <sergio.f.gonzalez@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
symexpr = {path = "../../02_mini-projects/26-symbolic-expr-v2", develop = true}
numpy = "^1.26.4"
matplotlib = "^3.9.0"
fns = {path = "../../02_mini-projects/21_fns-rates-of-change", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
