[tool.poetry]
name = "10-simulating-force-fields-ipynb"
version = "0.1.0"
description = "10 - Simulating force fields"
authors = ["Sergio F. Gonzalez <sergio.f.gonzalez@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
