[tool.poetry]
name = "10-simulating-force-fields-ipynb"
version = "0.1.0"
description = "10 - Simulating force fields"
authors = ["Sergio F. Gonzalez <sergio.f.gonzalez@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
vec2d = {path = "../../../../vec2d", develop = true}
vec3d = {path = "../../../../vec3d", develop = true}
lines = {path = "../../02_mini-projects/18-line-equations", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
