[tool.poetry]
name = "11-optimizing-physical-systems-ipynb"
version = "0.1.0"
description = "11 - Optimizing physical systems"
authors = ["Sergio F. Gonzalez <sergio.f.gonzalez@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
matplotlib = "^3.9.1.post1"
cannonballsim = {path = "../../02_mini-projects/29-cannonball-simulation", develop = true}
lines = {path = "../../02_mini-projects/18-line-equations", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
