[tool.poetry]
name = "sysequations"
version = "0.1.0"
description = ""
authors = ["Sergio F. Gonzalez <sergio.f.gonzalez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
