[tool.poetry]
name = "02-ai-agents-langgraph-ipynb"
version = "0.1.0"
description = "02 - AI Agents using LangGraph"
authors = ["Sergio F. Gonzalez <sergio.f.gonzalez@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
openai = "^1.39.0"
langgraph = "^0.1.19"
langchain-core = "^0.2.28"
langchain-openai = "^0.1.20"
langchain-community = "^0.2.11"
pygraphviz = "^1.13"
tavily-python = "^0.3.5"
aiosqlite = "^0.20.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
