[project]
name = "07-aiohttp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.10.10"]


[tool.ruff]
# Set the maximum line length to 80
line-length = 80

[tool.ruff.lint]
ignore = [
    "T201", # Allow print statements
]

select = ["ALL"]
