[project]
name = "11-asyncio-canned-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["rich>=13.9.4"]


[tool.ruff]
# Set the maximum line length to 80
line-length = 80

ignore = [
    "D401", # Don't require imperative mode
    "T201", # Allow print statements
]


select = ["ALL"]
