[project]
name = "08-async-observables"
version = "0.1.0"
description = "Illustrate how to subclass EventEmitter (also Hello!)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
]

[tool.ruff]
# Set the maximum line length to 80
# line-length = 80

ignore = [
  "T201", # Allow use of print statements
]

select = ["ALL"]
